ispravljene sve greske

--- a/src/html/DOMtabela.html
+++ b/src/html/DOMtabela.html
@@ -6,10 +6,12 @@
     <title>DOM Tabela</title>
 </head>
 <body>
+    <div>
     <label for="redovi">Unesi broj redova</label>
-    <select name="redovi" id="redovi"></select><br>
+    <select name="redovi" id="redovi"></select></div>
+    <div>
     <label for="kolone">Unesi broj kolona</label>
-    <select name="kolone" id="kolone"></select><br>
+    <select name="kolone" id="kolone"></select></div>
     <button id="dugme">Generisi tablelu</button>
     <div id="domTabela">
 
